--- a/src/App.scss
+++ b/src/App.scss
@@ -1,38 +1,24 @@
-.App {
-  text-align: center;
+@use './partials/fonts' as*;
+@use '../src/components/Header/Header' as*; 
+@use './partials/_mixins' as*;
+@use './partials/_variables' as*;
+@use './partials/_globals' as*;
+
+html{
+    font-family: 'AvenirNextLTPro';
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+.App{
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+    @include desktop{
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+        
+        &-container{
+            display: flex;
+        }
+        
+        &__left-container{
+            width: 75%;
+        }
+    }
 }
