--- a/src/components/VideoList/VideoList.scss
+++ b/src/components/VideoList/VideoList.scss
@@ -1,6 +1,6 @@
-@use '../../partials/mixins' as *;
-@use '../../partials/variables' as *;
-@use '../../partials/fonts' as*;
+@use '../../styles/partials/mixins' as *;
+@use '../../styles/partials/variables' as *;
+@use '../../styles/partials/fonts' as*;
 
 .vidList{
     padding-top: 40px;
