--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,6 +1,6 @@
-@use '../../partials/mixins' as *;
-@use '../../partials/variables' as *;
-@use '../../partials/fonts' as*;
+@use '../../styles/partials/mixins' as *;
+@use '../../styles/partials/variables' as *;
+@use '../../styles/partials/fonts.scss' as*;
 
 .search-box{
     width: 100%;
@@ -9,7 +9,7 @@
     border-radius: 4px;
     border: 1px solid $Silver;
     background-color: $Alabaster;
-    background-image: url(../../assets/Icons/Icon-search.svg);
+    background-image: url(../../assets/images/search.svg);
     background-repeat: no-repeat;
     background-position: 5%;
     padding-left: 2.5rem;
@@ -107,7 +107,7 @@
         border: white;
         background-color: $Instock-blue;
         border-radius: 4px;
-        background-image: url(../../assets/Icons/Icon-upload.svg);
+        background-image: url(../../assets/images/upload.svg);
         background-repeat: no-repeat;
         background-position:30% 40%; 
 
