--- a/src/styles/partials/fonts.scss
+++ b/src/styles/partials/fonts.scss
@@ -1,7 +1,7 @@
 @font-face {
   font-family: 'AvenirNextLTPro';
-  src: url('../assets/Fonts/AvenirNextProLT/AvenirNextLTPro-Bold.woff2') format('woff2'),
-      url('../assets/Fonts/AvenirNextProLT/AvenirNextLTPro-Bold.woff') format('woff');
+  src: url('../../assets/fonts/AvenirNextLTPro-Bold.woff2') format('woff2'),
+      url('../../assets/fonts/AvenirNextLTPro-Bold.woff') format('woff');
   font-weight: bold;
   font-style: normal;
   font-display: swap;
@@ -10,8 +10,8 @@
 
 @font-face {
   font-family: 'AvenirNextLTPro';
-  src: url('../assets/Fonts/AvenirNextProLT/AvenirNextLTPro-Demi.woff2') format('woff2'),
-   url('../assets/Fonts/AvenirNextProLT/AvenirNextLTPro-Demi.woff') format('woff');
+  src: url('../../assets/fonts/AvenirNextLTPro-Demi.woff2') format('woff2'),
+   url('../../assets/fonts/AvenirNextLTPro-Demi.woff') format('woff');
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -20,8 +20,8 @@
 
 @font-face {
   font-family: 'AvenirNextLTPro';
-  src: url('../assets/Fonts/AvenirNextProLT/AvenirNextLTPro-Regular.woff2') format('woff2'),
-   url('../assets/Fonts/AvenirNextProLT/AvenirNextLTPro-Regular.woff') format('woff');
+  src: url('../../assets/fonts/AvenirNextLTPro-Regular.woff2') format('woff2'),
+   url('../../assets/fonts/AvenirNextLTPro-Regular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
