refactoring and adjusting

--- a/src/page/Upload/Upload.scss
+++ b/src/page/Upload/Upload.scss
@@ -1,7 +1,7 @@
-@use '../../partials/fonts' as*;
-@use '../../partials/_mixins' as*;
-@use '../../partials/_variables' as*;
-@use '../../partials/_globals' as*;
+@use '../../styles/partials/fonts' as*;
+@use '../../styles/partials/_mixins' as*;
+@use '../../styles/partials/_variables' as*;
+@use '../../styles/partials/_globals' as*;
 
 
 .upload{
