--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,8 @@
-@use './partials/fonts' as*;
+@use './styles/partials/fonts';
 @use '../src/components/Header/Header' as*; 
-@use './partials/_mixins' as*;
-@use './partials/_variables' as*;
-@use './partials/_globals' as*;
+@use './styles/partials/_mixins' as*;
+@use './styles/partials/_variables' as*;
+@use './styles/partials/_globals' as*;
 
 html{
     font-family: 'AvenirNextLTPro';
